--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="icon" href="%PUBLIC_URL%/Icons8-Ios7-Cinema-Imdb.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
             content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+<!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>-->
     <script src="https://kit.fontawesome.com/0dd6af90ca.js" crossorigin="anonymous"></script>
     <!-- Fonts to support Material Design -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
+<!--    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>-->
     <!-- Icons to support Material Design -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>Cinema Application</title>
+    <title>Cinema Plus</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
